test/syntax/solidity_not_support/nameAndTypeResolution/346_unused_return_value_send.sol
contract test {
    function f() public {
        payable(address(0x12)).send(1);
    }
}
// ----
// ParserError 2314: (73-77): Expected identifier but got 'send'
